Closed Bug 1133142 Opened 11 years ago Closed 11 years ago

Downgrade "mTempFile not equal to mTargetFile" from assertion to warning

Categories

(Core :: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox37 --- fixed
firefox38 --- fixed
firefox39 --- fixed

People

(Reporter: jruderman, Assigned: jruderman)

References

Details

Attachments

(1 file)

###!!! ASSERTION: mTempFile not equal to mTargetFile: 'Error', file /builds/slave/m-cen-osx64-d-0000000000000000/build/src/netwerk/base/nsFileStreams.cpp, line 967 This assertion is responsible for at least four intermittent orange bugs. I also hit it on almost half my startups (which per bug 341986 probably means it shouldn't even be a warning...). Since this code is really old and nobody seems to be interested in debugging and fixing it, let's downgrade the assertion to a warning, so it doesn't keep triggering intermittent oranges and slowing down fuzzing.
Attachment #8564426 - Flags: review?(dteller)
Comment on attachment 8564426 [details] [diff] [review] downgrade assertion to warning Review of attachment 8564426 [details] [diff] [review]: ----------------------------------------------------------------- I have no clue what can cause this. Rubberstamping, but we should open a bug to find an actual solution.
Attachment #8564426 - Flags: review?(dteller) → review+
Bug 1134067 seems to be hitting this pretty easily right now, in case someone is interested in trying to debug. FWIW.
No longer blocks: 1133474
Assignee: nobody → jruderman
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: