Bug 1133142 - Downgrade 'mTempFile not equal to mTargetFile' from assertion to warning. r=yoric, a=NPOTB